--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,17 +1,7 @@
-driver=com.mysql.jdbc.Driver
+driverClassName=com.mysql.jdbc.Driver
 
-url=jdbc:mysql://localhost:3306/ssm
+url=jdbc:mysql://localhost:3306/AspireDemo?characterEncoding=UTF-8
 
 username=root
 
 password=12345678
-
-initialSize=0
-
-maxActive==20
-
-maxIdle=20
-
-minIdle=1
-
-maxWait=60000
