--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,16 @@
           
     </dependencies>  
   <build>
-    <finalName>Test</finalName>
+<!--     <plugins> -->
+<!--       <plugin> -->
+<!--         <groupId>org.apache.maven.plugins</groupId> -->
+<!--         <artifactId>maven-surefire-plugin</artifactId> -->
+<!--         <configuration> -->
+<!--           <skip>true</skip> -->
+<!--         </configuration> -->
+<!--       </plugin> -->
+<!--     </plugins> -->
+      <finalName>Test</finalName>
   </build>
+  
 </project>
