删除无用的引用

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 driverClassName=com.mysql.jdbc.Driver
 
-url=jdbc:mysql://localhost:3306/AspireDemo?characterEncoding=UTF-8
+url=jdbc:mysql://localhost:3306/AspireDemo?characterEncoding=UTF-8&useSSL=true
 
 username=root
 
