--- a/ios.plist
+++ b/ios.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://39.156.1.82:16102/download/file/MiGuIMP.ipa</string>
+					<string>https://github.com/Koy-Ren/Aspire-Demo/blob/master/MiGuImp_V2.9.0.ipa?raw=true</string>
 				</dict>
 			</array>
 			<key>metadata</key>
